# lean4_jupyter

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 00_tutorial.ipynb  01_basic.ipynb  01_cd.ipynb  01_commands.ipynb  02_load.ipynb  02_magic.ipynb  03_import.ipynb  repl-issue-40-dup-msg.ipynb  repl-issue-40-dup-sorries.ipynb  tutorial.ipynb
examples/demo_proj/: DemoProj.lean  Main.lean  demo.ipynb  lake-manifest.json  lakefile.lean
examples/demo_proj/DemoProj/: Basic.lean
ext/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  justfile  package.json  pyproject.toml
ext/.github/workflows/: build.yml  check-release.yml
ext/binder/: environment.yml  postBuild
ext/jupyterlab_lean4_codemirror_extension/: __init__.py
ext/src/: index.ts
ext/src/__tests__/: jupyterlab_lean4_codemirror_extension.spec.ts
ext/ui-tests/: package.json
ext/ui-tests/tests/: jupyterlab_lean4_codemirror_extension.spec.ts
lean4_jupyter/: __init__.py  __main__.py  display.py  install.py  kernel.py  repl.py
lean4_jupyter/resources/: __init__.py
scripts/: gen.sh  install_ext.sh  install_repl.sh  lint.sh  prep.sh  test.sh
