[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lean4_jupyter"
authors = [
    {name = "Utensil Song", email = "utensilcandel@gmail.com"},
]
description = "lean4_jupyter: A Lean 4 Jupyter kernel via REPL"
readme = "README.md"
dependencies = [
    "pexpect (>=4.0)",
    "ipykernel",
    "alectryon @ https://github.com/Kha/alectryon/archive/c3b16f650665745e1da4ddfcc048d3bd639f71d5.zip#sha256=d785ad48dc3d65a98f12d5653b95d63c299a1730fc5fdfb519957c9e60cd5a32"
]
classifiers = [
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/utensil/lean4_jupyter"
